# Aevum

./: .gitignore  AUDIT-ROADMAP.md  CONTRIBUTING.md  Cargo.toml  OVERVIEW.md  README.md  README.zh-CN.md
.cargo/: config.offline.toml  config.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: active_lock_pointer.rs  audit_config.rs  bootroot_soname.rs  config_ts_consistency.rs  export_system.rs  keep_two_isolation.rs  maintain_loop.rs  milestone1.rs  milestone2.rs  milestone3.rs  milestone4.rs  milestone5.rs  milestone6.rs  milestone7.rs  repair_e2e.rs  template_integration.rs  ts_inputs_in_lock.rs  verify_gate.rs
crates/closure-builder/: Cargo.toml
crates/closure-builder/src/: lib.rs
crates/config-ts/: Cargo.toml
crates/config-ts/src/: lib.rs
crates/elf/: Cargo.toml
crates/elf/src/: lib.rs
crates/etc-builder/: Cargo.toml
crates/etc-builder/src/: lib.rs
crates/generation/: Cargo.toml
crates/generation/src/: bootloader.rs  lib.rs
crates/intent/: Cargo.toml
crates/intent/src/: ai_client.rs  lib.rs
crates/maintainer/: Cargo.toml
crates/maintainer/src/: foundation.rs  lib.rs  tests.rs
crates/nix-source/: Cargo.toml
crates/nix-source/src/: cache.rs  lib.rs  nar.rs  narinfo.rs  nix_base32.rs
crates/nix-source/tests/: nix_e2e.rs
crates/service-compiler/: Cargo.toml
crates/service-compiler/src/: lib.rs
crates/solver/: Cargo.toml
crates/solver/src/: lib.rs  version.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/template/: Cargo.toml
crates/template/src/: lib.rs
docs/: CHANGELOG.md  README.md
docs/ai/: 01-maintainer-loop.md  02-repair-and-keep-two.md  03-garbage-collection.md  04-reconciliation-loop.md  05-intent-resolver-implementation.md  README.md
docs/architecture/: 00-overview.md
docs/architecture/adr/: 0001-positioning-vs-nixos.md  0002-no-dsl-intent-layer.md  0003-ai-maintainer-authority.md  0004-typescript-intent-frontend.md  0005-ai-model-form-factor.md  0006-bootable-distribution.md
docs/architecture/bootable/: 04-init-services-config.md  README.md
docs/architecture/foundations/: 01-store.md  02-generation.md  03-closure.md  04-index-and-supply.md  05-multi-source-and-isolation.md
docs/architecture/runtime/: 01-generation-lifecycle.md  02-intent-resolved-lock.md  03-binary-compat.md  04-state-vs-package-rollback.md  05-generation-diff-plan.md  06-remote-cache.md  07-host-coexistence.md
docs/architecture/server/: 01-server-and-trust-root.md
docs/comparison/: 01-nixos-pain-points.md  02-prior-art.md
docs/design/: nix-source.md
docs/guides/: 01-rust-implementation-kickoff.md  user-guide.md
docs/layers/: 01-foundation.md  02-system-and-app.md  README.md
docs/templates/: 01-template-model.md  README.md
examples/: aevum.config.ts  config.toml
examples/etc/: system.toml
examples/services/: demo.toml
poc/poc1-index-feasibility/: REPORT.md  analyze_depends.py  verify_elf_coverage.py
poc/poc1-index-feasibility/data/: step_a_result.json  step_b_result.json
poc/poc2-binary-compat/: REPORT.md  experiment.py  in_ns_test.py
poc/poc3-zero-ai-solver/: REPORT.md  solver.py  verify.py
poc/poc4-arch-isolation/: REPORT.md  build_closure.py
poc/poc4-arch-isolation/data/: rg.pkg.tar.zst
poc/poc5-complex-pkg/: REPORT.md
poc/poc6-arch-edges/: REPORT.md  experiment.py
poc/poc7-core-mechanics/: REPORT.md  experiment.py
scripts/: build-bootimage.sh  build-bootroot-initramfs.sh  build-initramfs.sh  build-s6-boot.sh  prep-complex.sh  prep-im-delegates.sh  prep-index.sh  prep-rg.sh  scratch-demo.sh
templates/: dev-rust.toml  minimal-desktop.toml
vm/: start-vm.ps1
vm/seed/: meta-data  user-data
