[package]
name = "aevum-maintainer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "aevum_maintainer"
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
aevum-solver.workspace = true
aevum-store.workspace = true
aevum-service-compiler.workspace = true
