[package]
name = "aevum-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "aevum_solver"
path = "src/lib.rs"

[dependencies]
sha2.workspace = true
hex.workspace = true
serde = { workspace = true }
thiserror.workspace = true
